# -ourse-database

./: Api_HH.py  Class_for_BD.py  README.md  config.py  database.ini  json_vacancy.json  main.py  pyproject.toml
src/: Api_HH.py  Class_abstract.py  Class_employers.py  Class_save_data.py  DB_params.py
